--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 
 dependencies:
   firebase_auth: ^4.1.1
+  firebase_core: ^2.2.0
   flutter:
     sdk: flutter
   flutter_localizations:
