--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
   sdk: ">=2.18.4 <3.0.0"
 
 dependencies:
+  cloud_firestore: ^4.0.5
   firebase_auth: ^4.1.1
   firebase_core: ^2.2.0
   flutter:
@@ -17,12 +18,15 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   google_fonts: ^3.0.1
+  json_annotation: 4.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: "^0.10.0"
   flutter_lints: ^2.0.0
+  build_runner: ^2.0.0
+  json_serializable: ^6.0.0
 
 flutter_icons:
   image_path: "assets/icons/app.png"
