--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cloud_firestore: ^4.0.5
   firebase_auth: ^4.1.1
   firebase_core: ^2.2.0
+  flutter_webrtc: ^0.9.16
   flutter:
     sdk: flutter
   flutter_localizations:
