--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,13 @@ dependencies:
     sdk: flutter
   google_fonts: ^3.0.1
   json_annotation: 4.7.0
+  device_info_plus: ^8.0.0
+  crypto: ^3.0.2
+  provider: ^6.0.4
+  firebase_crashlytics: ^3.0.6
+  firebase_analytics: ^10.0.6
+  firebase_performance: ^0.9.0+6
+  firebase_database: ^10.0.6
 
 dev_dependencies:
   flutter_test:
