--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_analytics: ^10.0.6
   firebase_performance: ^0.9.0+6
   firebase_database: ^10.0.6
+  throttling: ^1.0.0
 
 dev_dependencies:
   flutter_test:
