--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_performance: ^0.9.0+6
   firebase_database: ^10.0.6
   throttling: ^1.0.0
+  google_mobile_ads: ^2.3.0
 
 dev_dependencies:
   flutter_test:
