--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   firebase_database: ^10.0.6
   throttling: ^1.0.0
   google_mobile_ads: ^2.3.0
+  material_design_icons_flutter: ^6.0.7096
 
 dev_dependencies:
   flutter_test:
